# genomics_viz

./: UpgradeLog.htm  unity-builder.yml  unityProject.vrmanifest
.github/workflows/: activation.yml  unity-builder.yml
Assets/: BackboneMarker.cs  CameraController.cs  ChromosomeSubrenderer.cs  GeneLabelController.cs  Genomics.inputactions  TextButton.cs  fakeChromosomeController.cs  packages.config
Assets/Data/: fakeGenes.txt  fakePoints.txt  gene_annotation_V19.txt
Assets/Materials/: BackboneMat 1.mat  BackboneMat.mat  Backbone_mat.mat  BaseMaterial.mat  CTCFMat.mat  ColoredMat.mat  ColoredMatFocused.mat  GATAMat.mat  IDRMat.mat  Mat.mat  Test mat.mat
Assets/Models/: caplesscylidnder.fbx
Assets/Prefabs/: ColoredCylinder.prefab  ColoredCylinder_LOD0.prefab  ColoredCylinder_LOD1.prefab  ColoredCylinder_LOD2.prefab  ColoredCylinder_LOD3.prefab  Cylinder_LOD0.prefab  Cylinder_LOD3.prefab  LOD_Obj.prefab  Sphere.prefab  Sphere_CTCF.prefab  Sphere_GATA.prefab  Sphere_IDR.prefab  World Canvas.prefab  WorldSpaceCanvas 1.prefab  colored cylidnder.prefab  cylidnder.prefab
Assets/Scenes/: MainScene.unity  cartoon.unity  (+1 more)
Assets/StreamingAssets/Chromosomal/Scripts/chromsdata_tools/: pyproject.toml
Assets/StreamingAssets/Chromosomal/Scripts/chromsdata_tools/chromsdata_tools/: compilation.py  schema.py
Assets/StreamingAssets/Chromosomal/Scripts/chromsdata_tools/tests/: test_chromsdata_tools.py
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
blender/: caplesscylidnder.blend  caplesscylidnder.blend1  untitled.blend  untitled.blend1
(+78 files in other folders)
