[tool.poetry]
name = "chromsdata_tools"
version = "0.1.0"
description = ""
authors = ["Andre Popovitch <andre@popovit.ch>"]

[tool.poetry.dependencies]
python = "^3.7"
pycapnp = "^1.0.0"
toolz = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
compile_text_to_binary = "chromsdata_tools.compilation:compile_text_to_binary"